--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                 <a class="nav-link links" href="index.html">About</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link links" href="#">Portfolio</a>
+                <a class="nav-link links" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link links linkright" href="contact.html">Contact</a>
@@ -51,6 +51,7 @@
             <div class="col-xl-9 aboutme contactcontainer1">
                 
                 <h1>Contact Me</h1>
+
                 <hr>
 
                 <form action="#">
@@ -79,7 +80,7 @@
                     <div class="card-body">
                         <h3 class="card-title">Connect With Me</h3>
                     
-                        <hr>
+                        <hr id="hr2">
                         <div class="contactimages">
                                 <a href="https://github.com/Mosjoandy/" target="_blank"><img src="./assets/images/github.png" width="80" height="80" alt="github"></a>
                                 <a href="https://www.linkedin.com/in/nicholas-chan-ba225648/" target="_blank"><img src="./assets/images/linkedin.png" width="80" height="80" alt="linkedin"></a>
