--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="nav-link links" href="index.html">About</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link links" href="#">Portfolio</a>
+                <a class="nav-link links" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link links linkright" href="contact.html">Contact</a>
