attempt at fixing navbar

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- Navbar start -->
-    <nav class="navbar navbar-expand-sm navbar-fixed-top navbaralltheway">
+    <nav class="navbar navbar-expand-sm navbar-fixed-top navbar-light navbaralltheway">
         <div class="container">  
             <!-- Navbar title -->
             <span class="navbar-text align-middle navbartitle">
@@ -60,7 +60,7 @@
                                          
                         <div class="card bg-dark text-white">
                                 <a href="#">
-                            <img class="card-img projects" src="assets/images/placeholder1.jpg" alt="Project1">
+                            <img class="card-img" src="assets/images/placeholder1.jpg" alt="Project1">
                             <div class="card-img-overlay">
                                 <h5 class="card-title portfoliocards projecttitles">Project One</h5>
                             </div>
