--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- Navbar start -->
-    <nav class="navbar navbar-expand-sm navbar-fixed-top navbaralltheway">
+    <nav class="navbar navbar-expand-sm navbar-fixed-top navbar-light navbaralltheway">
         <div class="container">  
             <!-- Navbar title -->
             <span class="navbar-text align-middle navbartitle">
