added project1 to placeholder

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,9 +60,9 @@
                                          
                         <div class="card bg-dark text-white">
                                 <a href="#">
-                            <img class="card-img" src="assets/images/placeholder1.jpg" alt="Project1">
+                            <img class="card-img" src="assets/images/project1.png" alt="Project1">
                             <div class="card-img-overlay">
-                                <h5 class="card-title portfoliocards projecttitles">Project One</h5>
+                                <h5 class="card-title portfoliocards projecttitles">The Crystal Miner</h5>
                             </div>
                         </div>
                     </div>
