--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
                     <div class="col-sm-6">
                                          
                         <div class="card bg-dark text-white">
-                                <a href="#">
+                                <a href="https://github.com/Mosjoandy/unit-4-game">
                             <img class="card-img" src="assets/images/project1.png" alt="Project1">
                             <div class="card-img-overlay">
                                 <h5 class="card-title portfoliocards projecttitles">The Crystal Miner</h5>
